--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
+    <!-- <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
   integrity="sha512-dyZtM3C6Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q1Q=="
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
-/>
+/> -->
 
     <link rel="icon" type="image/svg+xml" href="./src//assets/images/theatives_logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
